Improve portfolio: simplify download button, highlight education, fix mobile menu, enhance color visibility

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,8 +23,8 @@ $card-background-light: #ffffff;
 $hover-color-light: #f1f1f1;
 
 // Accent Colors
-$accent-color: #64ffda;
-$accent-color-secondary: #58a6ff;
+$accent-color: #0ea5e9; // Changed to a more visible blue
+$accent-color-secondary: #0284c7;
 $error-color: #f85149;
 $success-color: #56d364;
 $warning-color: #e3b341;
